# log-optimizer-cli

./: Estructura del Repositorio  Makefile  README.md  exporter.py  filtres.py  logger.py  main.py  pyproject.toml  utils.py
tests/: test_exporter.py  test_filters.py
